force-app/main/default/objects/Rpl_Company__c/fields/Company_Image__c.field-meta.xml
<CustomField>
    <fullName>Company_Image__c</fullName>
    <inlineHelpText>Include high-quality images with dimensions less than 200 x 200 pixels for improved clarity when utilized in the Admit Card.</inlineHelpText>
    <label>Company Image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>