force-app/main/default/objects/Rpl_Company__c/fields/Rpl_Company_URL__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Company_URL__c</fullName>
    <label>Company URL</label>
    <type>Url</type>
</CustomField>