force-app/main/default/objects/Rpl_Company__c/fields/Rpl_Contact_Person__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Contact_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Person</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Companies</relationshipLabel>
    <relationshipName>Companies</relationshipName>
    <type>Lookup</type>
</CustomField>